added rcon port environment configuration

--- a/services/compose.minecraft-ftb-evolution-1.7.0.yaml
+++ b/services/compose.minecraft-ftb-evolution-1.7.0.yaml
@@ -12,6 +12,7 @@ services:
       FTB_MODPACK_VERSION_ID: 100018
     ports:
       - ${SQUADGOALS_MINECRAFT_FTB_EVOLUTION_1_7_0_PORT}:25565
+      - ${SQUADGOALS_MINECRAFT_FTB_EVOLUTION_1_7_0_PORT_RCON}:25575
     volumes:
       - "${SQUADGOALS_SERVERS_MINECRAFT_DATAS}/${SQUADGOALS_MINECRAFT_FTB_EVOLUTION_1_7_0_DATA}:/data"
       - "${SQUADGOALS_SERVERS_MINECRAFT_WORLDS}/${SQUADGOALS_MINECRAFT_FTB_EVOLUTION_1_7_0_WORLD}:/data/world"
