--- a/services/compose.minecraft-1.21.4.yaml
+++ b/services/compose.minecraft-1.21.4.yaml
@@ -11,6 +11,7 @@ services:
       VERSION: 1.21.4
     ports:
       - ${SQUADGOALS_MINECRAFT_1_21_4_PORT}:25565
+      - ${SQUADGOALS_MINECRAFT_1_21_4_PORT_RCON}:25575
     volumes:
       - "${SQUADGOALS_SERVERS_MINECRAFT_DATAS}/${SQUADGOALS_MINECRAFT_1_21_4_DATA}:/data"
       - "${SQUADGOALS_SERVERS_MINECRAFT_WORLDS}/${SQUADGOALS_MINECRAFT_1_21_4_WORLD}:/data/world"
