added cobblemon modpack server

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,9 @@
 # global
 SQUADGOALS_SERVERS="../server"
 
+# authentication
+SQUADGOALS_CURSEFORGE_API_KEY=
+
 # minecraft
 SQUADGOALS_SERVERS_MINECRAFT_DATAS="${SQUADGOALS_SERVERS}/minecraft/"
 SQUADGOALS_SERVERS_MINECRAFT_WORLDS="${SQUADGOALS_SERVERS}/minecraft-worlds/"
@@ -16,3 +19,7 @@ SQUADGOALS_MINECRAFT_FTB_REVELATION_3_7_0_PORT=25565
 SQUADGOALS_MINECRAFT_FTB_REVELATION_3_7_0_PORT_RCON=25575
 SQUADGOALS_MINECRAFT_FTB_REVELATION_3_7_0_DATA=ftb-revelation-3.7.0
 SQUADGOALS_MINECRAFT_FTB_REVELATION_3_7_0_WORLD=ftb-revelation-3.7.0
+SQUADGOALS_MINECRAFT_COBBLEMON_1_6_0_PORT=25565
+SQUADGOALS_MINECRAFT_COBBLEMON_1_6_0_PORT_RCON=25575
+SQUADGOALS_MINECRAFT_COBBLEMON_1_6_0_DATA=cobblemon-1.6.0
+SQUADGOALS_MINECRAFT_COBBLEMON_1_6_0_WORLD=cobblemon-1.6.0
