added ship of harkinian anchor server

--- a/.env.template
+++ b/.env.template
@@ -23,3 +23,7 @@ SQUADGOALS_MINECRAFT_COBBLEMON_1_6_0_PORT=25565
 SQUADGOALS_MINECRAFT_COBBLEMON_1_6_0_PORT_RCON=25575
 SQUADGOALS_MINECRAFT_COBBLEMON_1_6_0_DATA=cobblemon-1.6.0
 SQUADGOALS_MINECRAFT_COBBLEMON_1_6_0_WORLD=cobblemon-1.6.0
+
+# ship of harkinian
+SQUADGOALS_SERVERS_SHIP_OF_HARKINIAN="${SQUADGOALS_SERVERS}/soh/"
+SQUADGOALS_SHIP_OF_HARKINIAN_8_0_3_ANCHOR_PORT=43385
