fixed missing minecraft 1.21.1 environment variables

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,10 @@ SQUADGOALS_CURSEFORGE_API_KEY=
 # minecraft
 SQUADGOALS_SERVERS_MINECRAFT_DATAS="${SQUADGOALS_SERVERS}/minecraft/"
 SQUADGOALS_SERVERS_MINECRAFT_WORLDS="${SQUADGOALS_SERVERS}/minecraft-worlds/"
+SQUADGOALS_MINECRAFT_1_21_1_PORT=25565
+SQUADGOALS_MINECRAFT_1_21_1_PORT_RCON=25575
+SQUADGOALS_MINECRAFT_1_21_1_DATA=minecraft-1.21.1
+SQUADGOALS_MINECRAFT_1_21_1_WORLD=minecraft-1.21.1
 SQUADGOALS_MINECRAFT_1_21_4_PORT=25565
 SQUADGOALS_MINECRAFT_1_21_4_PORT_RCON=25575
 SQUADGOALS_MINECRAFT_1_21_4_DATA=minecraft-1.21.4
